--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 @import './styles/home.scss';
 @import './styles/footer.scss';
 @import './styles/about.scss';
+@import './styles/details.scss';
 body {
   margin: 0;
   padding: 0;
