--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -16,7 +16,15 @@ $midnight:#001341;
 $mustard:#d3b400;
 $canvas:#fbf1b6;
 $cayenne:#f92e3f;
-$slate:#f1ded8;
+$shell:#f1ded8;
 $navy:#0c2666;
 $indigo:#142D6C;
 $white:#FCFCFC;
+
+
+//FONT IMPORTS & STYLES
+
+
+
+$margin:20px;
+$padding:20px;
