added fonts and nav transitions

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,13 @@
 @import './styles/config.scss';
 @import './styles/nav.scss';
+@import './styles/navigation.scss';
 @import './styles/home.scss';
 @import './styles/footer.scss';
 @import './styles/about.scss';
 @import './styles/details.scss';
+@import './styles/reveal.scss';
+@import './styles/inspiration.scss';
+
 body {
   margin: 0;
   padding: 0;
