--- a/src/styles/details.scss
+++ b/src/styles/details.scss
@@ -1,3 +1,32 @@
 .detailsContainer {
-    padding: 0 50px;
+    padding: 200px 50px;
+    min-height: 250px;
+    position: relative;
+    max-width: 100%;
+    @media only screen and (max-width:$breakpoint-mobile-max) {
+        padding: 200px 0px;
+    }
+    .detailsL {
+        width: 30%;
+        position: absolute;
+        left: 0;
+        padding-left: 50px;
+        @media only screen and (max-width:$breakpoint-mobile-max) {
+            position: relative;
+            padding-left: 0;
+            width: 100%;
+            max-width: 100%;
+        }
+    }
+    .detailsR {
+        width: 50%;
+       margin-left: 50%;
+        padding-right: 50px;
+        @media only screen and (max-width:$breakpoint-mobile-max) {
+            margin-left: 0;
+            padding-right: 0;
+            width: 100%;
+            max-width: 100%;
+        }
+    }
 }
