--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,5 +1,5 @@
 .footerContainer {
-    background-color:$indigo;
+    background-color:$forest;
     .footerBottom {
         display: flex;
         flex-wrap: wrap;
@@ -10,7 +10,7 @@
             content:'';
             width: 100%;
             height: 1px;
-            background-color: $white;
+            background-color: #fff;
             display: block;
         }
         .footerSocial {
@@ -20,7 +20,7 @@
             padding-left: 100px;
             .scrollUp {
                 margin: 0;
-                color:$white;
+                color:#fff;
                 padding-right: 50px;
             }
             .social {
@@ -35,7 +35,7 @@
             display: flex;
             justify-content: flex-end;
             align-items: center;
-            color: $white;
+            color: #fff;
         }
     }
 }
